# Common/types/cms.type.ts
@@ -1,0 +1,5 @@
+export type CmsUser = {
+  id: string;
+  username: string;
+  email?: string;
+};
